--- a/Lesson2/button.html
+++ b/Lesson2/button.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h2>The button Element</h2>
-
-    <button type="button" onclick="alert('Hello World!')">Click Me!</button>
+    <input type="button" value="Input Button" />
+    <button type="button" onclick="alert('Hello World!')">
+        <img src="../my_tam.jpg" />
+    </button>
 </body>
 </html>
