--- a/Lesson2/emailInput.html
+++ b/Lesson2/emailInput.html
@@ -8,10 +8,10 @@
 <body>
     <h2>Email Field</h2>
 
-    <form action="https://www.w3schools.com/action_page.php">
-    <label for="email">Enter your email:</label>
-    <input type="email" id="email" name="email">
-    <input type="submit" value="Submit">
+    <form action="https://www.w3schools.com/action_page.php" novalidate>
+        <label for="email">Enter your email:</label>
+        <input type="email" id="email" name="email">
+        <input type="submit" value="Submit">
     </form>
 </body>
 </html>
