--- a/Lesson2/fieldset.html
+++ b/Lesson2/fieldset.html
@@ -15,8 +15,14 @@
         <input type="text" id="fname" name="fname" value="John"><br>
         <label for="lname">Last name:</label><br>
         <input type="text" id="lname" name="lname" value="Doe"><br><br>
-        <input type="submit" value="Submit">
     </fieldset>
+    <fieldset>
+        <legend>Jobs:</legend>
+        <label for="fname">Job name:</label><br>
+        <input type="text" id="jname" name="jname" value="developer"><br>
+
+    </fieldset>
+    <input type="submit" value="Submit">
     </form>
 </body>
 </html>
