--- a/Lesson2/idAttr.html
+++ b/Lesson2/idAttr.html
@@ -12,6 +12,10 @@
         margin: 20px;
         padding: 20px;
         }
+
+        #london {
+            background-color: blue;
+        }
     </style>
 </head>
 <body>
