--- a/Lesson2/inputSubmit.html
+++ b/Lesson2/inputSubmit.html
@@ -12,6 +12,7 @@
         <label for="lname">Last name:</label><br>
         <input type="text" id="lname" name="lname" value="Doe"><br><br>
         <input type="submit">
+        <input type="button" onclick="alert('Hello World!')" value="Button">
       </form> 
 </body>
 </html>
