--- a/Lesson2/inputCheckbox.html
+++ b/Lesson2/inputCheckbox.html
@@ -9,12 +9,15 @@
     <h2>Checkboxes</h2>
 
     <form action="https://www.w3schools.com/action_page.php">
-    <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+    <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike" checked>
     <label for="vehicle1"> I have a bike</label><br>
-    <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
+
+    <input type="checkbox" id="vehicle2" name="vehicle2" value="Car" disabled>
     <label for="vehicle2"> I have a car</label><br>
+
     <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
     <label for="vehicle3"> I have a boat</label><br><br>
+    <input type="text" value="ABCD" required />
     <input type="submit" value="Submit">
     </form> 
 </body>
