--- a/Lesson2/selectMultiple.html
+++ b/Lesson2/selectMultiple.html
@@ -9,13 +9,16 @@
     <h2>Allow Multiple Seletcions</h2>
 
     <form action="https://www.w3schools.com/action_page.php">
-    <label for="cars">Choose a car:</label>
-    <select id="cars" name="cars" size="4" multiple>
-        <option value="volvo">Volvo</option>
-        <option value="saab">Saab</option>
-        <option value="fiat">Fiat</option>
-        <option value="audi">Audi</option>
-    </select><br><br>
+        <label for="cars">Choose a car:</label>
+        <select id="cars" name="cars" size="4" multiple>
+            <option value="volvo">Volvo</option>
+            <option value="saab">Saab</option>
+            <option value="fiat">Fiat</option>
+            <option value="audi">Audi</option>
+            <option value="a">a</option>
+            <option value="body">body</option>
+            <option value="c">c</option>
+        </select><br><br>
     <input type="submit">
     </form>
 </body>
