--- a/Lesson3/externalCss.html
+++ b/Lesson3/externalCss.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="external.css">
 </head>
 <body>
-    <audio controls>
-        <source src="horse.ogv" type="audio/ogg">
-        <source src="horse.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+    <h1>External CSS</h1>
 </body>
 </html>
