--- a/Lesson3/inlineCSS.html
+++ b/Lesson3/inlineCSS.html
@@ -6,10 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <audio controls>
-        <source src="horse.ogv" type="audio/ogg">
-        <source src="horse.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+    <h1 style="color: blue;">Inline style</h1>
 </body>
 </html>
