--- a/Lesson3/internalCss.html
+++ b/Lesson3/internalCss.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1 {
+            color: green;
+        }
+    </style>
 </head>
 <body>
-    <audio controls>
-        <source src="horse.ogv" type="audio/ogg">
-        <source src="horse.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
+    <h1>Internal CSS</h1>
 </body>
 </html>
