add demo lesson 3

--- a/Bai tap ve nha 2/about.html
+++ b/Bai tap ve nha 2/about.html
@@ -19,7 +19,7 @@
         <hr>
         <h1>PlusPlus Academy</h1>
         <p>PlusPlus Academy tập trung mạnh đào tạo lập trình học máy (AI, Machine learning), web front end, back end (Java Spring), di động (iOS, React Native, Android), và phân tích dữ liệu với Python.</p>
-        <section>
+        <section id="standout-courses">
             <h2>Các khoá học nổi bật của trung tâm</h2>
             <p>Plus Plus Academy tự tin cung cấp cho học viên những khoá học chất lượng và chuyên sâu nhất, giúp các bạn xây dựng nền tảng vững chắc và tự tin bắt đầu công việc sau khi kết thúc các khoá học tại trung tâm.<p>
             <h3>Danh sách các khoá học nổi bật</h3>
@@ -30,7 +30,7 @@
                 <li>Khoá học ReactJs từ cơ bản đến nâng cao</li>
             </ul>
         </section>
-        <section>
+        <section id="intro-video">
             <h2>Video giới thiệu khoá học</h2>
             <video width="400" controls>
                 <source src="mov_bbb.mp4" type="video/mp4">
