--- a/Lesson3/background.html
+++ b/Lesson3/background.html
@@ -12,11 +12,12 @@
         }
 
         .background-image {
-            background-image: url('../my_tam.jpg');
-            /* background-repeat: no-repeat;
-            background-position: center;
-            background-size: cover;    
-            background-attachment: fixed; scroll */
+            /* background-image: url('../my_tam.jpg'), url('./abc.png');
+            background-position: right bottom, left top;
+            background-repeat: no-repeat, repeat; */
+            /* background-attachment: fixed; */
+            /* background-size: cover;  */
+            background: url('../my_tam.jpg') right bottom no-repeat, url('./abc.png') left top repeat;
             height: 1900px;
         }
     </style>
