--- a/Lesson3/margin.html
+++ b/Lesson3/margin.html
@@ -9,6 +9,7 @@
             padding: 20px;
             border: 1px solid grey;
             margin: 50px;
+            margin-bottom: 10px;
         }
         .margin-diff-element {
             padding: 20px;
@@ -23,11 +24,11 @@
 </head>
 <body>
     <div class="margin-element">
-        <p>Content</p>
+        <p>Content 1</p>
     </div>
     <br>
     <div class="margin-diff-element">
-        <p>Content</p>
+        <p>Content 2</p>
     </div>
 </body>
 </html>
