--- a/Lesson3/text.html
+++ b/Lesson3/text.html
@@ -18,8 +18,8 @@
 
     <h1>Decoration</h1>
     <h2 style="text-decoration: overline;">This is heading 2</h2>
-    <h2 style="text-decoration: line-through;"></h2>>This is heading 2</h2>
-    <h3 style="text-decoration: underline;"></h3>>This is heading 3</h3>
+    <h2 style="text-decoration: line-through;">This is heading 2</h2>
+    <h3 style="text-decoration: underline;">This is heading 3</h3>
     <hr>
 
     <h1>Transform</h1>
@@ -55,6 +55,7 @@
     </p>
     <hr>
     <h1 style="text-shadow: 2px 2px 5px red;">Shadow</h1>
+    <p><span style="color:red;">B</span><span style="color:blue;">u</span>i</p>
 
 </body>
 </html>
