--- a/Lesson3/border.html
+++ b/Lesson3/border.html
@@ -7,7 +7,7 @@
     <style>
         .border-solid {
             padding: 20px;
-            border: 1px solid grey;
+            border: 3px solid red;
             /* border-width: 1px;
             border-color: grey;
             border-style: solid; */
