--- a/Lesson3/externalCss.html
+++ b/Lesson3/externalCss.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="external.css">
+    <style>
+        h1 {
+            color: orange;
+        }
+    </style>
+   
+ 
 </head>
 <body>
     <h1>External CSS</h1>
