--- a/Lesson4/table.html
+++ b/Lesson4/table.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         table {
-          border-collapse: collapse;
+          border-collapse: separate;
         }
         
         table, td, th {
