--- a/Lesson4/fonts.html
+++ b/Lesson4/fonts.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <p class="font-time-new-roman">This is a paragraph, shown in the Times New Roman font.</p>
-    <div>
+    <div style="font-size: 16px;">
         <p class="font-arial">This is a paragraph, shown in the Arial font.</p>
     </div>
 </body>
