--- a/Lesson5/pseudoElement.html
+++ b/Lesson5/pseudoElement.html
@@ -7,6 +7,7 @@
     <style>
         h1::after {
             content: url(https://www.w3schools.com/css/smiley.gif);
+            /* string, image, "" */
         }
 
         h1::before {
