--- a/Lesson7/whiteLoop.html
+++ b/Lesson7/whiteLoop.html
@@ -6,13 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+        let i = 0;
+
+        while( i < 10 ) {
+            console.log(i);
+            i++;
+        }
+    </script>
 </body>
-<script>
-    // This statement will print text to console
-    /* This is multiple line
-        comment */
-    console.log("internal javascript");
-</script>
-<script src="./index.js"></script>
 </html>
