--- a/Lesson7/object.html
+++ b/Lesson7/object.html
@@ -10,17 +10,25 @@
         let studentA = {
             name: "A", 
             age: 8,
-            class: "3A"
+            class: "3A",
+            study: function() {
+                console.log(this.name  + " studying");
+            }
         }
     
         let studentB = {
             name: "B", 
             age: 9,
-            class: "4A"
+            class: "4A",
+            study: function() {
+                console.log(this.name  + " studying");
+            }
         }
     
         console.log(studentA.name);
+        studentA.study();
         console.log(studentB['age']);
+        studentB.study();
         studentB.score = 10;
         console.log(studentB);
     </script>
