--- a/Lesson7/object.html
+++ b/Lesson7/object.html
@@ -25,10 +25,12 @@
             }
         }
     
-        console.log(studentA.name);
+        console.log(studentA['name']);
         studentA.study();
         console.log(studentB['age']);
         studentB.study();
+
+        console.log(studentB);
         studentB.score = 10;
         console.log(studentB);
     </script>
