--- a/Lesson8/style.html
+++ b/Lesson8/style.html
@@ -6,13 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 id="title">JS Styled Title</h1>
     <script>
-        let i = 0;
+        let h1Elem = document.getElementById('title');
+        // h1Elem.style.color = "red";
+        // h1Elem.style.backgroundColor = "blue";
 
-        while( i < 10 ) {
-            console.log(i);
-            i++;
-        }
     </script>
 </body>
 </html>
