--- a/Lesson8/whiteLoop.html
+++ b/Lesson8/whiteLoop.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <script>
-        let myAge = 25;
-        let myAgeText = myAge > 30 ? "I'm too old" : "I'm young!";
-        console.log(myAgeText);
+        let i = 0;
+        while( i < 10 ) {
+            console.log(i);
+            i++;
+        }
     </script>
 </body>
 </html>
