--- a/Lesson7/howtouse.html
+++ b/Lesson7/howtouse.html
@@ -8,9 +8,13 @@
 <body>
     <script>
         // This statement will print text to console
-        /* This is multiple line
+        /* This is 
+        multiple line
             comment */
         console.log("internal javascript");
+        var x = 3;
+        var y = 7;
+
     </script>
     <script src="./index.js"></script>
 </body>
