--- a/Lesson9/filter.html
+++ b/Lesson9/filter.html
@@ -10,13 +10,14 @@
             $("div").first().css("background-color", "yellow");
             // $("div").last().css("background-color", "yellow");
             // $("div").filter(".intro").css("background-color", "yellow");
+            // $("p").not(".intro").css("color", "yellow");
         });
     </script>
 </head>
 <body>
     <div style="border: 1px solid black;">
         <p>A paragraph in a div.</p>
-        <p>Another paragraph in a div.</p>
+        <p class="intro">Another paragraph in a div.</p>
     </div>
     <br>
     
